--- a/package.json
+++ b/package.json
@@ -57,17 +57,19 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "bitcore-lib": "^0.15.0",
-    "bitcore-mnemonic": "^1.5.0",
-    "buffer": "^4.9.0",
-    "crypto-js": "^3.1.5",
-    "elliptic": "^3.1.0",
-    "ethereumjs-tx": "^1.3.3",
-    "ethereumjs-util": "^5.1.1",
-    "rlp": "^2.0.0",
-    "scrypt-async": "^1.2.0",
-    "tweetnacl": "0.13.2",
-    "web3": "0.20.2"
+    "bitcore-lib": "0.15.0",
+    "bitcore-mnemonic": "1.5.0",
+    "buffer": "4.9.1",
+    "crypto-js": "3.1.9-1",
+    "elliptic": "6.4.0",
+    "ethereumjs-tx": "1.3.4",
+    "ethereumjs-util": "5.2.0",
+    "rlp": "2.0.0",
+    "scrypt-async": "2.0.0",
+    "tweetnacl": "1.0.0",
+    "tweetnacl-util": "0.15.0",
+    "web3": "^1.0.0-beta.34",
+    "web3-eth-abi": "^1.0.0-beta.34"
   },
   "devDependencies": {
     "async": "^1.4.2",
